--- a/react-app/src/components/SignupModal/SignupModal.css
+++ b/react-app/src/components/SignupModal/SignupModal.css
@@ -44,7 +44,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: fit-content;
+  width: min(90%, 400px);
   margin: 0 auto;
   margin-top: 30px;
 }
@@ -202,14 +202,12 @@
 
 .profile-image-buttons-container{
   height: 120px;
-  width: 300px;
+  width: 100%;
   margin: auto 0;
   margin-top: -10px;
   margin-bottom: 15px;
   display: flex;
   flex-direction: column;
-
-
 }
 
 .profile-image-buttons-header{
